<resources>
    <string name="app_name">FootballPazl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brazil_national_football_team">Brazil national football team</string>
    <string name="international_football_federation">International Football Federation</string>
    <string name="country">Country:</string>
    <string name="more_info">More info</string>
    <string name="next">Next</string>
    <string name="germany">Germany</string>
    <string name="w">W</string>
    <string name="_1_0">1 : 0</string>
    <string name="vs">VS</string>
    <string name="spain">Spain</string>
    <string name="team_rating">Team Rating:</string>
    <string name="team_squad">Team squad</string>
    <string name="replay">Replay</string>
    <string name="brazil_mozaic">Brazil Mozaic</string>
</resources>