<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_win_lose"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </LinearLayout>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/_1_0"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            />


        <TextView
            android:id="@+id/tv_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:layout_marginStart="80dp"
            />

        <TextView
            android:id="@+id/tv_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spain"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>