<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_2"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:layout_constraintTop_toBottomOf="@id/const_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/img_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_brazil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg2"
        android:layout_marginTop="450dp"
        app:layout_constraintTop_toBottomOf="@id/const_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_national_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brazil_national_football_team"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tv_footbal_federation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/international_football_federation"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_national_team"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/tv_footbal_federation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/img_flag_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_footbal_federation"
            app:layout_constraintStart_toEndOf="@id/tv_country"
            android:src="@drawable/brazil_flag"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_more_info"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_flag_country"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/btn_info_color"
            android:text="@string/more_info"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"

            />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>